--- a/public_static/css/widget_standalone.css
+++ b/public_static/css/widget_standalone.css
@@ -41,7 +41,7 @@ table.gh tr th :last-child, table.gh tr td :last-child {
 div.widget_container.note {
   position: relative;
   border-radius: 0 6px 6px 6px;
-  margin-top: calc(32px + 16px);
+  margin-top: 48px;
 }
 
 .widget_top_float {
@@ -70,7 +70,7 @@ div.widget_container.note {
   position: absolute;
   top: 1rem;
   right: calc(100% + var(--widget_container-padding));
-  width: clamp(12ch, 24ch, 32ch);
+  width: 24ch;
   background-color: var(--color-base-2);
   border-radius: 0.25rem 0 0 0.25rem;
   border: 1px solid var(--color-base-1);
